<resources>
    <string name="app_name">Swoosh</string>
    <string name="app_title">GO ALL IN</string>
    <string name="sub_app_title">ON GOING ALL OUT</string>
    <string name="moto">Find a team in your city and dominate the league</string>
    <string name="button_text">GET STARTED</string>
    <string name="league_text">Desired Leagues</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="coed">Co-ed</string>
    <string name="next">Next</string>
    <string name="beginner">Beginner</string>
    <string name="baler">Baler</string>
    <string name="finish">Finish</string>
    <string name="message">I am a:</string>
    <string name="looking"></string>
</resources>